[package]
name = "dvault"
version = "0.1.0"
edition = "2021"
authors = [
  "maverik-io <github.com/maverik-io",
]
license = "MIT OR Apache-2.0"
description = "Make and manage aes encryped folders"
readme = "README.md"
repository = "https://github.com/mavenried/dvault"
keywords = ["cli", "diary", "encrypt"]
categories = ["command-line-utilities"]


[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"]}
dirs = "5.0.1"
rpassword = "7.3.1"
sha2 = "0.10.8"
